--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Blog posts from REDO FROM START</h1>
+    <section id="blog-posts"></section>
     <script src="index.js"></script>
 </body>
 </html>
