--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WP API Test</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Blog posts from REDO FROM START</h1>
     <section id="blog-posts"></section>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
