added basic layout for .blog-posts-gallery & .blog-post-thumbnail. added breakpoint @ 570px

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Blog posts from REDO FROM START</h1>
-    <section id="blog-posts-gallery"></section>
+    <section id="blog-posts-gallery" class="blog-posts-gallery"></section>
     <section id="blog-posts"></section>
     <script src="index.js" type="module"></script>
 </body>
